--- a/src/components/TodoItem/index.css
+++ b/src/components/TodoItem/index.css
@@ -1,26 +1,58 @@
 .todo-item {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  border: 1px solid #ff8542;
+  justify-content: space-between;
+  background-color: #eef2ff;
+  padding: 12px 14px;
   border-radius: 8px;
-  padding: 12px 16px;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
 }
 
 .todo-title {
-  color: #000000;
   font-size: 16px;
-  margin: 0;
+  color: #334155;
+  flex-grow: 1;
+  margin-left: 12px;
 }
 
-.delete-button {
-  background-color: #ffffff;
-  border: 1px solid #ff0b37;
-  color: #ff0b37;
-  padding: 6px 12px;
+.completed {
+  text-decoration: line-through;
+  color: #64748b;
+}
+
+/* Buttons */
+.edit-btn,
+.save-btn,
+.delete-btn {
+  padding: 6px 10px;
   border-radius: 6px;
   cursor: pointer;
+  border: none;
   font-size: 14px;
-  outline: none;
+  margin-left: 10px;
+}
+
+.edit-btn {
+  background-color: #0284c7;
+  color: white;
+}
+
+.save-btn {
+  background-color: #16a34a;
+  color: white;
+}
+
+.delete-btn {
+  background-color: #dc2626;
+  color: white;
+}
+
+/* Edit Input */
+.edit-input {
+  padding: 6px 10px;
+  border-radius: 6px;
+  border: 1px solid #94a3b8;
+  font-size: 15px;
+  flex-grow: 1;
+  margin-left: 10px;
 }
